@@ -15,6 +15,7 @@
 - investigate crashes under fc3 (with dags packages)
 - decode unicode before placing text on clipboard
 - fix unicode encoding/decoding on import/export
+  (this also means encoding/decoding the file password)
 
 0.5.x:
 - ensure complete UTF-8 support
