@@ -28,7 +28,7 @@ from base import HandlerError, DataError, FormatError, PasswordError, VersionErr
 from fpm import FPM
 from gpass import GPass
 from netrc import NetRC
-from pwsafe import PasswordSafe1, PasswordSafe2
+from pwsafe import PasswordSafe1, PasswordSafe2, PasswordGorilla
 from rvl import RevelationXML, Revelation
 from text import PlainText
 from xhtml import XHTML
@@ -37,6 +37,7 @@ HANDLERS = [
 	FPM,
 	GPass,
 	NetRC,
+	PasswordGorilla,
 	PasswordSafe1,
 	PasswordSafe2,
 	PlainText,
